app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  --scroll-behavior: smooth !important;
  scroll-behavior: smooth !important;
  scroll-padding-top: 45px;
}

@media only screen and (min-width: 768px) {
  html {
    scroll-padding-top: 72px;
  }
}

body {
  font-family: "DM Sans", sans-serif;
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  -webkit-border-radius: 10px;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: rgba(255, 255, 255, 0.3);
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

::-webkit-scrollbar-thumb:window-inactive {
  background: rgba(255, 255, 255, 0.3);
}

::selection {
  @apply text-secondary-red bg-white;
}

/* Flex Shortcuts */
.flexCenter {
  @apply flex justify-center items-center;
}

.flexBetween {
  @apply flex justify-between items-center;
}

.flexStart {
  @apply flex items-center justify-start;
}

/* All Sections */
.sectionOverline,
.sectionHeading,
.sectionHeading-2,
.sectionHeading-3,
.sectionLeading,
.sectionDescription {
  @apply block text-left w-full;
}

.sectionOverline,
.sectionOverline-2 {
  @apply text-secondary-red font-extrabold uppercase;
}
.sectionOverline {
  @apply text-sm;
}

.sectionOverline-2 {
  @apply text-xs;
}

.sectionHeading {
  @apply font-bold text-3xl capitalize;
}

.sectionHeading-2 {
  @apply font-bold text-xl capitalize;
}

.sectionHeading-3 {
  @apply font-bold text-lg capitalize;
}

.sectionLeading {
  @apply font-semibold text-base text-neutral-900 normal-case;
}

.sectionDescription {
  @apply font-medium text-sm text-neutral-800 normal-case text-left;
}

.sectionPadding {
  @apply px-[10px] md:px-[100px] py-[50px];
}

.sectionTitle {
  @apply flex;
}

.sectionSubtitle {
  @apply flex;
}

.callToAction {
  @apply w-full bg-secondary-red text-base font-extrabold text-white p-4 hover:bg-accent-pink rounded-md transition-all duration-200 ease-in-out flexCenter;
}

.sectionCta__outline {
  @apply w-full hover:border-secondary-red text-base font-extrabold p-4 rounded-md border border-neutral-400 text-neutral-400 hover:text-secondary-red transition-all duration-200 ease-in-out;
}

/* Hover Effects */
.hoverSmoothScale {
  @apply hover:scale-105 duration-300 ease-out transition-all;
}

/* Navbar Section */
.navbar {
  @apply flex items-center justify-between pt-2 pb-1 md:pt-[5px] md:pb-0 px-6 md:px-12 w-screen fixed top-0 !z-40 lg:max-w-screen-xl text-slate-500 overflow-hidden;
}

.navbar__scrolled {
  @apply shadow-lg bg-white;
}

.navbar__desktop {
  @apply w-screen flexBetween gap-10 md:gap-16 justify-center items-center;
}

.navbar__desktop-center {
  @apply lg:flex hidden gap-10;
}

.navbarLogo,
.navbarCta__desktop {
  @apply w-[140px];
}

.navbarLogo {
  @apply text-4xl font-black text-secondary-red;
}

.navbarListItem {
  @apply flex flex-col w-full text-center;
}

.navbarLinks {
  @apply flex flex-col w-full text-black-1 gap-4;
}

.navbarLinks__desktop {
  @apply flex flex-row gap-4;
}

.navbarLink {
  @apply px-4 py-3 my-3 font-bold text-sm hover:text-secondary-red target:text-secondary-red capitalize block w-full;
}

.navbarCta__desktop,
.navbarCta {
  @apply items-center justify-center bg-secondary-red text-base font-extrabold text-white p-3 hover:bg-accent-pink rounded-md gap-2 text-center;
}

.navbarCta__desktop {
  @apply hidden lg:flex;
}

.navbarMenu {
  @apply lg:hidden flex flex-row gap-10;
}

.navbarCta {
  @apply flex w-[90%];
}

.navbar__mobile-open,
.navbar__mobile-closed {
  @apply flex flex-col items-center gap-8 bg-white min-w-full h-full fixed top-0 lg:hidden z-50 ease-in-out duration-500;
}

.navbar__mobile-open {
  @apply right-0;
}

.navbar__mobile-closed {
  @apply right-[-100%];
}

.navbar__mobile-top {
  @apply flex w-full justify-between items-center pt-2 pb-1 px-6;
}

/* Hero Section  */
/* Main */
.hero {
  @apply flex flex-col lg:flex-row justify-center items-center gap-[100px] md:gap-[50px] w-full h-[100vh] max-h-[1000px];
}

/* Container */
.heroContainer {
  @apply flex w-full h-[90%] mt-[50px] md:mt-0;
}

/* Profile Card */
/* .heroCards {
  @apply w-[95%] md:w-[70%] h-[450px] flex flex-row items-center justify-end mt-[60px] md:mt-0 relative hover:transition-all hover:scale-105 duration-500 ease-in-out z-10;
}

.heroCard {
  @apply w-[280px] h-[450px] md:w-[300px] md:h-[400px] rounded-lg absolute bottom-0 right-0 md:static flex flex-row justify-start items-end;
}

.heroCard:nth-child(1) {
  @apply bg-black text-white z-[1] -translate-x-[90px] -translate-y-4 md:-rotate-12 md:translate-x-6 md:translate-y-7;
}

.heroCard:nth-child(2) {
  @apply bg-secondary-red text-white z-[2] -translate-x-[45px] -translate-y-2 md:rotate-0 md:translate-x-0 md:translate-y-0;
}

.heroCard:nth-child(3) {
  @apply bg-white text-black md:rotate-12 z-[3] md:-translate-x-6 md:translate-y-7 border border-slate-300 shadow-md;
}

.heroCard_title {
  @apply -rotate-90 w-[110px] h-fit -translate-x-8 -translate-y-14;
} */

.heroCard {
  @apply w-[20%] md:w-[150px] relative rounded-md m-[10px] cursor-pointer transition-all duration-500 ease-in-out flex justify-between items-end text-white p-[20px] overflow-hidden gap-[10px];
}

.heroCard:nth-child(2) {
  @apply translate-y-[50px];
}

.heroCard.active {
  @apply grow-[2];
}

.heroCard__image {
  @apply absolute inset-0 object-cover object-center rounded-md -z-10;
}

/* Card Content */
.heroCard__content {
  @apply flex flex-col w-full h-full justify-end p-[20px] whitespace-nowrap;
}

.heroCard__content h1 {
  @apply -translate-y-[30px] -translate-x-1/2 -rotate-90 transition-all duration-500 ease-in-out;
}

.heroCard.active .heroCard__content h1 {
  @apply translate-y-0 translate-x-0 rotate-0 z-[11];
}

.heroCard__content p {
  @apply -translate-y-[30px] -translate-x-[200px] transition-all duration-500 ease-in-out;
}
/* ... */

